Added more installing and running info to the README.